--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.1.0  # Thêm package http
+  cloudinary_public: ^0.21.0  # Thêm Cloudinary
 
 dev_dependencies:
   flutter_test:
