--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   image_picker: ^1.0.4
   flutter_local_notifications: ^17.2.3
   provider: ^6.1.1
-
+  firebase_auth: ^4.15.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
