--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.1.0  # Thêm package http
   cloudinary_public: ^0.21.0  # Thêm Cloudinary
   shared_preferences: ^2.2.2 #Lưu theme
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
